[gd_scene load_steps=9 format=3 uid="uid://cuc8vme7t2efp"]

[ext_resource type="Texture2D" uid="uid://dwifq7ux3pifw" path="res://sprites/enemies/robot.png" id="1_6giwm"]
[ext_resource type="Script" path="res://scenes/enemies/robot_bosses/robot_boss_sniper/robot_boss_sniper.gd" id="1_shies"]
[ext_resource type="PackedScene" uid="uid://clpjd4x7slyyi" path="res://scenes/weapons/robot_boss_sniper_rifle/robot_boss_sniper_rifle.tscn" id="2_2dp7d"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="3_igp2g"]
[ext_resource type="Script" path="res://scripts/components/hurt_box_component.gd" id="4_tcn3r"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ibodj"]
radius = 34.0
height = 92.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bgne5"]
radius = 25.0
height = 86.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hc27v"]

[node name="RobotBossSniper" type="CharacterBody2D" node_paths=PackedStringArray("rifle")]
collision_layer = 32
collision_mask = 39
motion_mode = 1
script = ExtResource("1_shies")
rifle = NodePath("RobotBossSniperRifle")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ibodj")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.258824, 0.584314, 1, 1)
position = Vector2(5, 0)
scale = Vector2(2, 2)
texture = ExtResource("1_6giwm")

[node name="RobotBossSniperRifle" parent="." instance=ExtResource("2_2dp7d")]
position = Vector2(39, -25)
scale = Vector2(2.44, 1.48)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 300.0

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_igp2g")
max_health = 200

[node name="HurtBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health")]
visible = false
script = ExtResource("4_tcn3r")
health = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
shape = SubResource("CapsuleShape2D_bgne5")
debug_color = Color(1, 0.6, 0.701961, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(26, 27)
shape = SubResource("RectangleShape2D_hc27v")
debug_color = Color(1, 0.6, 0.701961, 0.419608)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(24, -25)
shape = SubResource("RectangleShape2D_hc27v")
debug_color = Color(1, 0.6, 0.701961, 0.419608)
